--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "faker": "^3.1.0",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^7.2.1",
-    "mysql": "^2.12.0",
+    "pg": "^6.1.0",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^3.27.0"
   }
 }
