--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "start": "nodemon app.js --exec babel-node",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "babel-node ./node_modules/.bin/babel-istanbul cover ./node_modules/.bin/_mocha test/server",
+    "seed": "babel-node server/seeders/seeders.js"
   },
   "repository": {
     "type": "git",
@@ -42,8 +43,13 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
+    "babel-istanbul": "^0.12.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
-    "nodemon": "^1.11.0"
+    "chai": "^3.5.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
+    "supertest": "^2.0.1"
   }
 }
