--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "nodemon app.js --exec babel-node",
     "test": "babel-node ./node_modules/.bin/babel-istanbul cover ./node_modules/.bin/_mocha test/server",
-    "seed": "babel-node server/seeders/seeders.js"
+    "seed": "babel-node server/seeders/seeders.js",
+    "migrations": "sequelize db:migrate"
   },
   "repository": {
     "type": "git",
