--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ services:
   - postgresql
 
 before_script:
-  - psql -c 'drop database if exists testdb;' -U root -P 'password'
-  - psql -c 'create database testdb;' -U root -P 'password'
+  - psql -c 'drop database if exists testdb;' -U postgres
+  - psql -c 'create database testdb;' -U postgres
   - NODE_ENV=test npm run migrations
 
 script:
