--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ before_script:
 script:
   - NODE_ENV=test npm test
 
+after_script:
+ - cat ./coverage/**/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 
 addons:
   postgresql: "9.3"
