--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
   - NODE_ENV=test npm test
 
 after_script:
- - cat ./coverage/**/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+ - cat ./coverage/lcov-report/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 
 addons:
   postgresql: "9.3"
