--- a/server/config/config.json
+++ b/server/config/config.json
@@ -15,7 +15,8 @@
     "logging": false
   },
   "production": {
-    "username": "root",
+    "use_env_variable": "DATABASE_URL",
+    "username": null,
     "password": null,
     "database": "database_production",
     "host": "127.0.0.1",
