update: add relative path to seed command

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "nodemon app.js --exec babel-node",
     "test": "babel-node ./node_modules/.bin/babel-istanbul cover ./node_modules/.bin/_mocha test/server",
-    "seed": "babel-node server/seeders/seeders.js",
+    "seed": "node ./node_modules/babel-cli/bin/babel-node server/seeders/seeders.js",
     "migrations": "node_modules/.bin/sequelize db:migrate"
   },
   "repository": {
