update: add script for running model tests

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "nodemon app.js --exec babel-node",
     "test": "babel-node ./node_modules/.bin/babel-istanbul cover ./node_modules/.bin/_mocha test/server",
     "seed": "node ./node_modules/babel-cli/bin/babel-node server/seeders/seeders.js",
+    "model": "babel-node ./node_modules/.bin/_mocha test/models",
     "migrations": "node_modules/.bin/sequelize db:migrate"
   },
   "repository": {
