--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,10 @@ before_script:
   - NODE_ENV=test npm run migrations
   - NODE_ENV=test npm run seed
 
+
 script:
   - NODE_ENV=test npm test
+  - NODE_ENV=test npm run model
 
 after_script:
  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
