--- a/server/config/config.json
+++ b/server/config/config.json
@@ -7,6 +7,8 @@
   "test": {
     "username": null,
     "password": null,
+    "database": "testdb",
+    "host": "127.0.0.1",
     "dialect": "postgres",
     "logging": false
   },
