update: test database config update

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,1 @@
-DB_NAME=your_db
-DB_USERNAME=your_username
-DB_PASSWORD=your_password
-SECRET=your_secret
+DATABASE_URL=postgres://username:password@host:port/DB_NAME
