--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,14 +1,10 @@
 {
   "development": {
-    "username": null,
-    "password": null,
-    "database": "todos-dev"
+    "use_env_variable": "DATABASE_URL",
+    "dialect": "postgres",
   },
   "test": {
-    "username": null,
-    "password": null,
-    "database": "testdb",
-    "host": "127.0.0.1",
+    "use_env_variable": "DATABASE_URL",
     "dialect": "postgres",
     "logging": false
   },
