--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "use_env_variable": "DATABASE_URL",
-    "dialect": "postgres",
+    "dialect": "postgres"
   },
   "test": {
     "use_env_variable": "DATABASE_URL",
