--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
   },
   "homepage": "https://github.com/andela-aatanda/checkpoint3-document-management-api#readme",
   "dependencies": {
-    "bcrypt": "^0.8.7",
-    "body-parser": "^1.15.2",
-    "dotenv": "^2.0.0",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
     "babel-istanbul": "^0.12.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
+    "bcrypt": "^0.8.7",
+    "body-parser": "^1.15.2",
+    "cors": "^2.8.1",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^7.2.1",
